@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ru.meefik.linuxdeploy"
-    android:versionCode="40"
+    android:versionCode="41"
     android:versionName="1.3.0" >
 
     <uses-sdk
